--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/styles.css" />
-    <link rel="icon" href="Images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,24 +17,24 @@
   <body>
     <div class="top-container">
       <img
-        src="Images/cloud-computing.png"
+        src="images/cloud-computing.png"
         alt="cloud-image"
         class="top-cloud"
       />
       <h1>I'm Casey.</h1>
       <h2>a <span class="pro-text">pro</span>grammer.</h2>
       <img
-        src="Images/cloud-computing.png"
+        src="images/cloud-computing.png"
         alt="cloud-image"
         class="bottom-cloud"
       />
-      <img src="Images/mountain2.png" alt="mountain-image" class="mountain" />
+      <img src="images/mountain2.png" alt="mountain-image" class="mountain" />
     </div>
 
     <!-- Stub Code -->
     <div class="middle-container">
       <div class="profile">
-        <img src="Images/clock.gif" alt="clock-gif" class="clock" />
+        <img src="images/clock.gif" alt="clock-gif" class="clock" />
         <h2>Hey!</h2>
         <p class="intro">
           I'm a Computer Science A-level student looking to break my way in to
@@ -48,7 +48,7 @@
           <img
             class="skills-gifs"
             id="programming-gif"
-            src="Images/programming-giphy.gif"
+            src="images/programming-giphy.gif"
             alt="programming-gif"
           />
           <h3>Programming</h3>
@@ -66,7 +66,7 @@
           <img
             class="skills-gifs"
             id="cs-gif"
-            src="Images/cs-giphy.webp"
+            src="images/cs-giphy.webp"
             alt="computer-science-gif"
           />
           <h3>Computer Science</h3>
@@ -120,7 +120,7 @@
           <img
             class="skills-gifs"
             id="music-gif"
-            src="Images/music-giphy.gif"
+            src="images/music-giphy.gif"
             alt="music-gif"
           />
           <h3>Music Production</h3>
